# ChangeLog for dev-libs/openssl
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.211 2006/11/04 00:37:17 iluxa Exp $

  04 Nov 2006; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  openssl-0.9.8d.ebuild:
  0.9.8 builds on mips now, so add mips back to keywords

  03 Nov 2006; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  openssl-0.9.7l.ebuild:
  Stabilize on mips

  23 Oct 2006; Joslwah <joslwah@gentoo.org> openssl-0.9.8d.ebuild:
  Mark ppc64 stable.

  18 Oct 2006; Roy Marples <uberlord@gentoo.org> openssl-0.9.7l.ebuild:
  Added ~sparc-fbsd keyword.

  14 Oct 2006; Aron Griffis <agriffis@gentoo.org> openssl-0.9.7l.ebuild,
  openssl-0.9.8d.ebuild:
  Mark 0.9.8d 0.9.7l stable on ia64. #145510

  14 Oct 2006; Jason Wever <weeve@gentoo.org> openssl-0.9.8d.ebuild:
  Added fix from bug #149958 for ppc64.

  01 Oct 2006; Mike Frysinger <vapier@gentoo.org>
  +files/openssl-0.9.8-makedepend.patch, openssl-0.9.7l.ebuild,
  openssl-0.9.8d.ebuild:
  Fix up depend system to use gcc to generate deps #149583.

  01 Oct 2006; Mike Frysinger <vapier@gentoo.org> openssl-0.9.8d.ebuild:
  Respect LDFLAGS #149676 by Donnie Berkholz.

  30 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org> openssl-0.9.7l.ebuild,
  openssl-0.9.8d.ebuild:
  Stable on alpha as per security bug #145510

  28 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  openssl-0.9.7l.ebuild, openssl-0.9.8d.ebuild:
  ppc stable, bug #145510

  28 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> openssl-0.9.7l.ebuild,
  openssl-0.9.8d.ebuild:
  Stable on hppa wrt security #145510

  28 Sep 2006; Jason Wever <weeve@gentoo.org> openssl-0.9.7l.ebuild,
  openssl-0.9.8d.ebuild:
  Stable on SPARC wrt security bug #145510.

  28 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> openssl-0.9.7l.ebuild,
  openssl-0.9.8d.ebuild:
  Stable on amd64/x86 wrt bug #145510.

  28 Sep 2006; Brent Baude <ranger@gentoo.org> openssl-0.9.7l.ebuild: