@@ -39,14 +39,19 @@ MD5 d59919721f04f84d5d395c405a5be30d files/openssl-0.9.8b-parallel-build.patch 6
 RMD160 ce857d7bfcf2039afc7ffe3d1badf9d3f374f672 files/openssl-0.9.8b-parallel-build.patch 600
 SHA256 3219c6a1133f6df42909bcb5d30a097b88529e3964049a24dd3e9836a659f08d files/openssl-0.9.8b-parallel-build.patch 600
 DIST openssl-0.9.8d.tar.gz 3315566 RMD160 f2eb6c266009bbbdbdc7f01b6238c55b3fe12073 SHA1 4136fba00303a3d319d2052bfa8e1f09a2e12fc2 SHA256 022194944cc20dad917c86c916db8a4e0050df2de91b9b6740ddd4fb2daf175d
-EBUILD openssl-0.9.8d.ebuild 6019 RMD160 dbd6e62bef360dd6f08a726895a975bec436e49e SHA1 8263f8c3f2a4590399b7eca4fe39b3859e8d571d SHA256 94208902aa48a44b1939b4f5a9749b914da0a19b27ac7b487fffd6be70abf968
-MD5 64d2ce0222c3b063b24dd8a851440309 openssl-0.9.8d.ebuild 6019
-RMD160 dbd6e62bef360dd6f08a726895a975bec436e49e openssl-0.9.8d.ebuild 6019
-SHA256 94208902aa48a44b1939b4f5a9749b914da0a19b27ac7b487fffd6be70abf968 openssl-0.9.8d.ebuild 6019
-MISC ChangeLog 32111 RMD160 4fc6944e1916929f6337bf1819c63a108bab1a74 SHA1 8003405bd8656b6c35bef97b799c0670c47ffefc SHA256 fc3c29ee1135e3e630d34d23490b0b2dabf6cb4ff27a2307d9221dab56c83e71
-MD5 5aafa009446d6fdf268f2a841ee70f9e ChangeLog 32111
-RMD160 4fc6944e1916929f6337bf1819c63a108bab1a74 ChangeLog 32111
-SHA256 fc3c29ee1135e3e630d34d23490b0b2dabf6cb4ff27a2307d9221dab56c83e71 ChangeLog 32111
+DIST openssl-0.9.8e.tar.gz 3341665 RMD160 c1a498606dc0fc7219376b950fab6b53687466db SHA1 b429872d2a287714ab37e42296e6a5fbe23d32ff SHA256 414e8428b95fbc51707965fda31390497d058290356426bfe084b49464a60340
+EBUILD openssl-0.9.8d.ebuild 5560 RMD160 d13c14fcbad64bd476a71c1fac4dd4cf83dc9e92 SHA1 f8a139ae7e9325df64e3b66e45e12b9abbaa354e SHA256 d16a423e84362e156ded8540de100af43b9e313720d079ea914804788bce10f4
+MD5 b6852fdedfb0dbdaa2e76e05f5d29d21 openssl-0.9.8d.ebuild 5560
+RMD160 d13c14fcbad64bd476a71c1fac4dd4cf83dc9e92 openssl-0.9.8d.ebuild 5560
+SHA256 d16a423e84362e156ded8540de100af43b9e313720d079ea914804788bce10f4 openssl-0.9.8d.ebuild 5560
+EBUILD openssl-0.9.8e.ebuild 5726 RMD160 2616a0053146f7206ed902f710af66d48ff91329 SHA1 e10083128c55799f09ae4a8ece0fcbc60daafbf8 SHA256 8881ddb5492e3255032290de750bb6c4688303dfcb24f971a5b1f95e1bcc3681
+MD5 3ac5056e3426df3e0f0f16220c06a6e6 openssl-0.9.8e.ebuild 5726
+RMD160 2616a0053146f7206ed902f710af66d48ff91329 openssl-0.9.8e.ebuild 5726
+SHA256 8881ddb5492e3255032290de750bb6c4688303dfcb24f971a5b1f95e1bcc3681 openssl-0.9.8e.ebuild 5726
+MISC ChangeLog 32315 RMD160 2e86c6f66518eb7c45a79f463cb0c8b593caff33 SHA1 5694c0a517dde1c0b5c55e000d90c927f8d95506 SHA256 3444894aef6c54c7a4ab621638a08826a9e523f3cd04ef74951a917ea278d8f1
+MD5 738a2d696e0f8a3340d102a73e115023 ChangeLog 32315
+RMD160 2e86c6f66518eb7c45a79f463cb0c8b593caff33 ChangeLog 32315
+SHA256 3444894aef6c54c7a4ab621638a08826a9e523f3cd04ef74951a917ea278d8f1 ChangeLog 32315
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -54,3 +59,6 @@ SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata
 MD5 c860eede8676360f4cd66b1fcb17345c files/digest-openssl-0.9.8d 247
 RMD160 fc03af9cd4ca71ec400924bfd866e09b0a8d59a7 files/digest-openssl-0.9.8d 247
 SHA256 f71ab1e8bddbc1f5dfcfafba984d0c2c95088b751768ff691f5fcc911be601a8 files/digest-openssl-0.9.8d 247
+MD5 b7beba1f496f9ed591d246ccb3986805 files/digest-openssl-0.9.8e 247
+RMD160 70d9be870635c3015dcea57e013ad2017c44f878 files/digest-openssl-0.9.8e 247
+SHA256 2805d899eece0f11f31ca624c548ed874c31daaddf922044a6586a3ad2aad00a files/digest-openssl-0.9.8e 247
