@@ -1,6 +1,13 @@
 # ChangeLog for dev-libs/openssl
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.211 2006/11/04 00:37:17 iluxa Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.212 2007/02/27 13:50:23 vapier Exp $
+
+*openssl-0.9.8e (27 Feb 2007)
+*openssl-0.9.7m (27 Feb 2007)
+
+  27 Feb 2007; Mike Frysinger <vapier@gentoo.org> +openssl-0.9.7m.ebuild,
+  +openssl-0.9.8e.ebuild:
+  Version bump #168357 by Michael Huber.
 
   04 Nov 2006; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
   openssl-0.9.8d.ebuild:
